{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "64bacee7-2af2-4d83-aa3f-29d5d9c28df7",
            "actions": [
                {
                    "name": "Grow",
                    "type": "Button",
                    "id": "bd19894f-e989-402d-b104-31a733fbc899",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DraaiLinks",
                    "type": "Button",
                    "id": "598b3d90-f797-4457-9e2f-3804ba9c9443",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DraaiRechts",
                    "type": "Button",
                    "id": "8f604f2b-5b94-4d86-9e13-05a9a9a47874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DraaiOmhoog",
                    "type": "Button",
                    "id": "4a541631-23fa-4da2-a7fe-d050bb6649f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DraaiOmlaag",
                    "type": "Button",
                    "id": "5154dbbf-9829-4252-962c-e3b1e3460c08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Smaller",
                    "type": "Button",
                    "id": "2ce287d8-bf96-4345-bb51-e2c02122942e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "ad55b402-c17c-4cca-9885-b170fc557d42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "7f0a4f9c-8cb6-4074-87b7-dabfa1a0da30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "bea143d3-4b3d-40b9-ac81-6ae54235394f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rumble",
                    "type": "Button",
                    "id": "defeea23-821f-45b5-bc76-cc81c903ee30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StopRumble",
                    "type": "Button",
                    "id": "ced33c15-098b-4fc5-be28-35e8435a1261",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6ad3afd-8b01-485b-a1c7-dd763965095c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a98778e0-0f6c-487d-b5ef-0210b98c37ff",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DraaiLinks",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60667a45-9d60-439f-89df-0aa788339aea",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DraaiRechts",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b058ddd-a5bd-468a-a785-9c748f439117",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DraaiOmhoog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d09cb184-5082-4ead-bde0-a8096a2f39f3",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DraaiOmlaag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "768897b5-a782-4499-bd86-dddab0602950",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Smaller",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a9c5f71-2cf1-4342-a8e8-c11cd91c9da0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d183bf2-1314-48ba-bc7a-0471cb26c2cc",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ed6bed2-2bcc-4cbf-92c6-3f5983755838",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c0c683-54ce-440f-8de6-0ab4dc156089",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rumble",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d939226-b48a-4fb9-8c99-9130e4cca42d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopRumble",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Kleur",
            "id": "1be9c237-94b7-4ede-aed3-d00630528cde",
            "actions": [
                {
                    "name": "Rondje",
                    "type": "Button",
                    "id": "c26bdc5e-324a-4837-89d3-edfbef0087af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Kruisje",
                    "type": "Button",
                    "id": "e8fa7fc3-5780-47c9-b548-f57f97d0b11b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vierkantje",
                    "type": "Button",
                    "id": "2c45217f-a56f-4175-afc8-6ab48e40805a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Driehoekje",
                    "type": "Button",
                    "id": "9e342742-ccc6-4052-9687-e1c33ed9603e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6e16ed3b-fbbb-4481-aa36-3d66c477d737",
                    "path": "<HID::Sony Interactive Entertainment Controller>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rondje",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "746ae030-b39d-42e1-b995-387080dcd16b",
                    "path": "<HID::Sony Interactive Entertainment Controller>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kruisje",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "322b3aba-14a8-4d4c-9916-9ee6a2dddd45",
                    "path": "<HID::Sony Interactive Entertainment Controller>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vierkantje",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b349f3a4-14a5-4d79-a150-fddc18f29713",
                    "path": "<HID::Sony Interactive Entertainment Controller>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driehoekje",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}